<resources>
    <string name="app_name">Project_2_Space_Recorder</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="textview_login">Log In</string>
    <string name="button_log_in">Log In</string>
    <string name="button_create_account">Create Account</string>
    <string name="textview_create_account">Create Account</string>
    <string name="edit_text_enter_username">Enter Username</string>
    <string name="edit_text_enter_password">Enter Password</string>
    <string name="edit_text_re_enter_password">Re-Enter Password</string>
    <string name="button_create_account_2">Create Account</string>
    <string name="hint_display_username">display_username</string>
    <string name="button_admin">Admin</string>
    <string name="textview_planet_id">Planet ID</string>
    <string name="button_log_out">Log Out</string>
    <string name="searchview_search_here">Search Here</string>
    <string name="find_new_planet">Find New Planet</string>
    <string name="find_new_solar_system">Find New Solar System</string>
    <string name="jump_through_wormhole">Jump Through Wormhole</string>
    <string name="cool_black_hole_render">Cool Black Hole Render</string>
    <string name="edit_text_enter_planet_name">Enter Planet Name</string>
    <string name="text_view_your_home_planet">Your Home Planet:</string>
    <string name="button_explore">Explore</string>
    <string name="Profile">Your Profile</string>
    <string name="UsernameComma">Username:</string>
    <string name="AgeComma">Age:</string>
    <string name="enter_age">Enter Age</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="age">Age:</string>
    <string name="password">Password:</string>
    <string name="new_password">New Password</string>
    <string name="confirm">Confirm:</string>

    <string name="Note">Note: You may leave some fields blanks</string>
    <string name="back">back</string>
    <string name="button_search_the_universe">Search The Universe</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="discovered_planet_message">You Have Discovered A New Planet!</string>
    <string name="enter_planet_name">Enter Planet Name</string>
    <string name="discovered_solar_system">You Have Discovered a New Solar System!</string>
    <string name="you_have_discovered_a_new_galaxy">You Have Discovered a New Galaxy!</string>
    <string name="back_button">BACK</string>
    <string name="submit">Submit</string>
    <string name="button_home">Home</string>
    <string name="button_settings">Settings</string>
    <string name="please_enter_query_here">Please Enter Query Here</string>
    <string name="button_confirm">Confirm</string>
    <string name="enter_distance_from_star">Enter distance from star</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="Apply">Apply</string>
    <string name="enter_planet_name2">Enter Planet Name</string>
    <string name="planet_name">Planet Name:</string>
    <string name="enter_population_name">Enter Population name</string>
    <string name="enter_distance_from_star2">Enter Distance from star</string>
    <string name="distance_from_star_in_km">Distance from star (in AU)</string>
    <string name="enter_planet_size">Enter Planet Size</string>
    <string name="planet_size_in_km">Planet Size (in km)</string>
    <string name="enter_climate_type">Enter Climate type</string>
    <string name="planet_climate">Planet Climate</string>
    <string name="planet_population">Planet Population</string>
    <string name="create_planet">Create Planet</string>
    <string name="enter_solar_system_name">Enter Solar System Name</string>
    <string name="enter_type_of_star">Enter type of star</string>
    <string name="distance_from_galaxy_center">Distance from galaxy center (in LY):</string>
    <string name="distance_from_center">Enter distance from galaxy center</string>
    <string name="galaxy_id">Galaxy ID:</string>
    <string name="enter_galaxy_id">Enter Galaxy ID</string>
    <string name="galaxy_name">Galaxy name:</string>
    <string name="galaxy_color">Galaxy Color:</string>
    <string name="enter_galaxy_name">Enter galaxy name</string>
    <string name="create_solar_system">Create Solar System</string>
    <string name="search">search</string>
    <string name="edit_planet">Edit Planet</string>
    <string name="delete_planet">Delete Planet</string>
    <string name="delete_galaxy">Delete Galaxy</string>
    <string name="edit_galaxy">Edit Galaxy</string>

</resources>