<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.project_2_space_recorder.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview_login"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_username"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:layout_marginTop="116dp"
        android:gravity="center"
        android:hint="@string/edit_text_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="Username" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="238dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:hint="@string/edit_text_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_username" />

    <Button
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_marginTop="44dp"
        android:gravity="center"
        android:text="@string/button_log_in"
        android:id="@+id/button_log_in"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button_create"
        android:layout_width="266dp"
        android:layout_height="68dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:text="@string/button_create_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_log_in"
        app:layout_constraintVertical_bias="0.021" />


</androidx.constraintlayout.widget.ConstraintLayout>